--- a/index.html
+++ b/index.html
@@ -1,10 +1,89 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <meta charset="utf-8"> 
+        <title>proyek web si</title>
+        <link rel="stylesheet" href="proyek web si.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     </head>
-<body>
-<h1>Hello world</h1>
-    
+    <body>
+        <label for="logo"></label>
+    <ul>
+        <li><a href="https://fti.unai.edu/">Menu</a></li>
+        <li></li>
+        <li><a href="biodata.html">Offers</a></li>
+        <li></li>
+        <li><a href="contact.html">Restaurant</a></li>
+        <li></li>
+        <li><a href="freeweb.html">Career</a></li>
+        <li></li>
+        <li><a href="">Reward</a></li>
+        <li></li>
+        <li><a href="">More</a></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li>Burger King</li>
+        <li></li>
+        <li><a class="li1" href=""> For item availablly</a></li>
+        <li></li>
+        <li><a class="li2" href="#">Choose your location</a></li>
+        <li></li>
+        <li><a class="li3" href="">sign up</a></li>
+        <li></li>
+        <li><a class="li4" href="">$0.00</a></li>
+        <li></li>
+    </ul>
+    <br>
+    <br>
+    <div class="gallery0">
+        <a target="_blank" href="ghost.webp">
+          <img src="ghost.webp" alt="Cinque Terre" width="500">
+        </a>
+        <div class="descA">Do you host a ghost?</div>
+        <div class="desc2">Coming soon, use the BK® App as a ghost detector! Scan your house and</div>
+        <div class="desc3">unlock an exclusive Ghost Pepper Whopper® deal for you and your spooky friend.</div>
+      </div>
+      <div class="gallery1">
+        <a target="_blank" href="burger.webp">
+          <img src="burger.webp" alt="Cinque Terre" width="500">
+        </a>
+        <div class="descB">Free* Whopper, Croissan’wich, or Original Chicken Sandwich on your first digital order</div>
+        <div class="desc4">Only on the BK® App and bk.com. Available on delivery. *Min $3+ Purch. req’d. See Terms.</div>
+        <div class="desc5"><a class="link1" href=""> Sign Up To redeem</a></div>
+      </div>
+      <div class="gallery2">
+        <a target="_blank" href="life-life.webp">
+          <img src="life-life.webp" alt="Cinque Terre" width="500">
+        </a>
+        <div class="descC">Join the team!</div>
+        <div class="desc6">At BK®, you can find work-life balance, flexibility and career</div>
+        <div class="desc7">growth, because you deserve to live life your way. It’s not just a</div>
+        <div class="desc8">job, it’s a career opportunity! Hiring decisions are determined</div>
+        <div class="desc9">solely by the franchisee who independently owns and operates each restaurant.</div>
+        <div class="desc10"><a class="link2" href="">apply today</a></div>
+      </div>
+      <div class="gallery3">
+        <a target="_blank" href="free fries.webp">
+          <img src="free fries.webp" alt="Cinque Terre" width="500">
+        </a>
+        <div class="descD">Join Royal Perks for FREE FRIES all year!</div>
+        <div class="desc11">Royal Perks members get FREE FRIES weekly for the rest</div>
+        <div class="desc12">of the year with any purchase! Join by 6/20 and you can</div>
+        <div class="desc13">enjoy this tasty benefit, too.<a href="">See Terms</a></div>
+        <div class="desc14"><a  class="link3" href="">Sign up to Order</a></div>
+      </div>
+
+      <div class="gallery4">
+        <a target="_blank" href="phone.webp">
+          <img src="phone.webp" alt="Cinque Terre" width="600">
+        </a>
+        <div class="desc15">Save $$$ With offers on demand</div>
+        <div class="desc16">Apple and the Apple logo are trademarks of Apple Inc., registered in the</div>
+        <div class="desc17">U.S. and other countries. App Store is a service mark of Apple Inc.</div>
+        <div class="desc18">Google Play is a trademark of Google Inc. Terms apply.</div>
+      </div>
+      
 </body>
 </html>
